--- a/package.json
+++ b/package.json
@@ -20,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/tommyshelby9121/TicketyBot/issues"
   },
-  "homepage": "https://github.com/tommyshelby9121/TicketyBot#readme"
+  "homepage": "https://github.com/tommyshelby9121/TicketyBot#readme",
+  "dependencies": {
+    "discord.js": "^12.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
