--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A fully customizable discord ticket bot created for large support guilds",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc -p .",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "repository": {
     "type": "git",
