--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "homepage": "https://github.com/tommyshelby9121/TicketyBot#readme",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "jsdom": "^16.4.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.5",
     "@types/node": "^14.14.16",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
