--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Lint
-        run: npm lint
+        run: npm run lint
